<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="45sp"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-condensed-medium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/input_hint"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/user_input_text"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperature_radio"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-light"
                android:id="@+id/temperature_unit_radio"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/length_radio"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-light"
                android:id="@+id/length_unit_radio"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Select units:"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/from_unit_type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/conversion"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/to_unit_type"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/result_hint"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:background="@android:color/white"
            android:id="@+id/display_result_view"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/calculate_button"
            android:background="@color/calculate_button"
            android:onClick="calculate"/>

    </LinearLayout>

</RelativeLayout>